--- a/1.0/tr/index.html
+++ b/1.0/tr/index.html
@@ -7,8 +7,8 @@ title: Başlangıç
   yepyeni bir soluk getiren, günümüzün uyarlamalı önyüz çatısı <span class="simget">deveb</span>'e hoş geldiniz.
 </p>
 
-<div data-gnl="1 1p ortada metin-ortada" data-byk="dengeli-aralık">
-  <div data-kart>
+<div data-gnl="ortada metin-ortada" data-byk="dengeli-aralık">
+  <div data-kart style="width:300px;">
     <h1>UYARLAMALI</h1>
     <p style="font-size:23px;">
     <i class="fa fa-mobile" aria-hidden="true" style="font-size:1em;"></i>
@@ -18,14 +18,14 @@ title: Başlangıç
     </p>
     <p>Küçük ekran öncelikli tasarım</p>
   </div>
-  <div data-kart>
+  <div data-kart style="width:300px;">
       <h1>ÜCRETSİZ</h1>
       <p style="font-size:23px;">
         <i class="fa fa-github" aria-hidden="true" style="font-size:2em;"></i>
       </p>
       <p>Github düzleminde açık kaynak</p>
   </div>
-  <div data-kart>
+  <div data-kart style="width:300px;">
     <h1>ÇAĞDAŞ</h1>
     <p style="font-size:23px;">
       <i class="fa fa-css3" aria-hidden="true" style="font-size:2em;"></i>
