--- a/1.0/tr/kap-orgusu/bicim-duzeni.html
+++ b/1.0/tr/kap-orgusu/bicim-duzeni.html
@@ -24,6 +24,41 @@ title: Biçim Düzeni - Kap Örgüsü
   </body>
   {% endhighlight %}
 </div>
+<h2>Kap</h2>
+<p>
+  Tasarımlarınızı yaparken sabit genişlikte çalışmak isteyebilirsiniz. Aynı zamanda
+  bu genişliklerin ekran genişliğine göre yeni sabit genişliklere sahip olmasını
+  isteyebilirsiniz. Bunun için "kap" değiştirgesini kullanmanız yeterlidir.
+</p>
+<div class="örnek">
+  <h3>Örnek</h3>
+  <div class="önizleme">
+    <div data-gnl="kap">
+      <div data-gnl="1 3p">
+        1 3p
+      </div>
+      <div data-gnl="1 3p o">
+        1 3p
+      </div>
+      <div data-gnl="1 3p">
+        1 3p
+      </div>
+    </div>
+  </div>
+  {% highlight html %}
+  <div data-gnl="kap">
+    <div data-gnl="1 3p">
+      1 3p
+    </div>
+    <div data-gnl="1 3p">
+      1 3p
+    </div>
+    <div data-gnl="1 3p">
+      1 3p
+    </div>
+  </div>
+  {% endhighlight %}
+</div>
 
 <h2>Sığ</h2>
 <p>
