--- a/1.0/tr/kap-orgusu.html
+++ b/1.0/tr/kap-orgusu.html
@@ -73,11 +73,11 @@ title: Kap Örgüsü 1.0
     <h3>Sıralama</h3>
     <p>
       Sıralama özelliği kap örgüsünün ilginç bir özelliğidir. Günümüzde display:flex
-      ile gelen özelliklerden biridir. Aslında bunun geçmişi biraz daha uzundur
-      ancak kabul edilir derecede yaygınlaşması nedeniyle birçok kişi için yenidir.
-      Mesela geniş ekranlarda yan yana duran iki nesnenin dar ekranlarda alt alta
-      durmasını sağladınız ama alttaki aslında üstte durmalı diye karar verdiniz.
-      Nasıl yapacaksınız? İşte sıralama özelliği burada yardımınıza koşuyor. Ayrıntılar
-      için <a href="/1.0/tr/kap-orgusu/siralama.html">sıralama sayfasını</a>
+      ile gelen özelliklerden biridir. Bu özelliğin ortaya çıkışı çok daha öncelere
+      dayanır. Yaygın kullanımı son yıllarda olması sebebiyle birçok kişi için yeni
+      bir özellik olarak anlaşılır. Örneğin geniş ekranlarda yan yana duran iki
+      ögenin dar ekranlarda alt alta durmasını sağladınız ama altta görünen öge aslında üstte
+      durmalı diye karar verdiniz. Nasıl yapacaksınız? İşte sıralama özelliği burada
+      yardımınıza koşuyor. Ayrıntılar için <a href="/1.0/tr/kap-orgusu/siralama.html">sıralama sayfasını</a>
       inceleyebilirsiniz.
     </p>
