--- a/1.0/tr/index.html
+++ b/1.0/tr/index.html
@@ -9,27 +9,38 @@ title: Başlangıç
 
 <div data-gnl="ortada metin-ortada" data-byk="dengeli-aralık">
   <div data-kart style="width:300px;">
-    <h1>UYARLAMALI</h1>
+
     <p style="font-size:23px;">
     <i class="fa fa-mobile" aria-hidden="true" style="font-size:1em;"></i>
     <i class="fa fa-tablet" aria-hidden="true" style="font-size:1.3em;"></i>
     <i class="fa fa-laptop" aria-hidden="true" style="font-size:1.7em;"></i>
     <i class="fa fa-desktop" aria-hidden="true" style="font-size:2em;"></i>
     </p>
-    <p>Küçük ekran öncelikli tasarım</p>
+    <h1>UYARLAMALI</h1>
+    <p>Küçük ekran öncelikli tasarla</p>
   </div>
   <div data-kart style="width:300px;">
-      <h1>ÜCRETSİZ</h1>
+
       <p style="font-size:23px;">
         <i class="fa fa-github" aria-hidden="true" style="font-size:2em;"></i>
       </p>
+      <h1>ÜCRETSİZ</h1>
       <p>Github düzleminde açık kaynak</p>
   </div>
   <div data-kart style="width:300px;">
-    <h1>ÇAĞDAŞ</h1>
+
+      <p style="font-size:23px;">
+        <i class="fa fa-search" aria-hidden="true" style="font-size:2em;"></i>
+      </p>
+      <h1>OKUNABİLİR</h1>
+      <p>İnsan için yazması ve okuması basit</p>
+  </div>
+  <div data-kart style="width:300px;">
+
     <p style="font-size:23px;">
       <i class="fa fa-css3" aria-hidden="true" style="font-size:2em;"></i>
     </p>
+    <h1>ÇAĞDAŞ</h1>
     <p>Elverişli en iyi imkanlarla</p>
   </div>
 </div>
