--- a/1.0/tr/kap-orgusu/konumlama.html
+++ b/1.0/tr/kap-orgusu/konumlama.html
@@ -1,6 +1,6 @@
 ---
 layout: s1n0/varsayilan
-title: Kap Örgüsü Konumlama
+title: Konumlama - Kap Örgüsü
 ---
 
   <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç öznitelik sınıfıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
