--- a/1.0/tr/kap-orgusu/genlesme-duzeni.html
+++ b/1.0/tr/kap-orgusu/genlesme-duzeni.html
@@ -1,6 +1,6 @@
 ---
 layout: s1n0/varsayilan
-title: Kap Örgüsü Genleşme Düzeni
+title: Genleşme Düzeni - Kap Örgüsü
 ---
 
   <p>Basit şekilde genleşmeler belirterek kap alanları oluşturabilirsiniz. Genleşme düzeni "CSS FLEX" özelliği üzerine geliştirilmiştir. genleşme örgüsünün kullanımı için ekran özniteliklerine (data-gnl, data-mnk ...) "<span data-metin="ana">SAYIg</span>" sınıfını yazmanız yeterlidir. SAYI 1 ile 24 arasında değer alabilir. Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş olmasını istiyorsunuz. Bunun için data-gnl="2g" data-gnl="1g" öznitelikleri tanımlaybilirsiniz.</p>
