--- a/1.0/tr/kap-orgusu/konumlama.html
+++ b/1.0/tr/kap-orgusu/konumlama.html
@@ -2,8 +2,144 @@
 layout: s1n0/varsayilan
 title: Konumlama - Kap Örgüsü
 ---
+  
+  <p class="girlik">
+    Artık konumlama yapmak için daha fazla seçeneğiniz var. Sol, orta, sağ, solüst, üst, üstsağ, solalt, alt, altsağ, anaçizgi gibi konumlamalar yapabilirsiniz. Ayrıca aralık tanımlayarak bir yanı diğer yandan uzaklaştırabilirsiniz.
+  </p>
 
-  <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç öznitelik sınıfıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
+  <h3>Konumlama: l, lt, t, ts, s, as, a, la, o</h3>
+  <p>
+    İçerikleri herhangi bir yana yerleştirmek için l, lt, t, ts, s, as, a, la, o değiştirgeleri kullanılır. Değiştirgelerin anlamları aşağıdaki gibidir. Soldan sağa ve üstten alta doğru yazma kuralına göre yanlara en yakın harfler hangi yan olduğunu tanımlamaktadır.
+  </p>
+
+  <div class="örnek">
+    <h3>Önizleme</h3>
+    <div class="önizleme">
+      <div style="height:300px;">
+        <div data-gnl="1 3p lt">lt: solüst</div>
+        <div data-gnl="1 3p t">t: üst</div>
+        <div data-gnl="1 3p ts">ts: üstsağ</div>
+        <div data-gnl="1 3p l">l: sol</div>
+        <div data-gnl="1 3p o">o: orta</div>
+        <div data-gnl="1 3p s">s: sağ</div>
+        <div data-gnl="1 3p la">la: solalt</div>
+        <div data-gnl="1 3p a">a: alt</div>
+        <div data-gnl="1 3p as">as: altsağ</div>
+      </div>
+    </div>
+  </div>
+  {% highlight html %}
+    <div style="height:300px;">
+      <div data-gnl="1 3p lt">lt: solüst</div>
+      <div data-gnl="1 3p t">t: üst</div>
+      <div data-gnl="1 3p ts">ts: üstsağ</div>
+      <div data-gnl="1 3p l">l: sol</div>
+      <div data-gnl="1 3p o">o: orta</div>
+      <div data-gnl="1 3p s">s: sağ</div>
+      <div data-gnl="1 3p la">la: solalt</div>
+      <div data-gnl="1 3p a">a: alt</div>
+      <div data-gnl="1 3p as">as: altsağ</div>
+    </div>
+  {% endhighlight %}
+
+  <div class="örnek">
+    <h3>Önizleme</h3>
+    <div class="önizleme">
+      <div data-gnl="l">
+        <div data-gnl="1 3p">l: sol</div>
+      </div>
+      <div data-gnl="o">
+        <div data-gnl="1 3p">o: orta</div>
+      </div>
+      <div data-gnl="s">
+        <div data-gnl="1 3p">s: sağ</div>
+      </div>
+    </div>
+  </div>
+  {% highlight html %}
+    <div data-gnl="l">
+      <div data-gnl="1 3p">l: sol</div>
+    </div>
+    <div data-gnl="o">
+      <div data-gnl="1 3p">o: orta</div>
+    </div>
+    <div data-gnl="s">
+      <div data-gnl="1 3p">s: sağ</div>
+    </div>
+  {% endhighlight %}
+  <div class="örnek">
+    <h3>Önizleme</h3>
+    <div class="önizleme">
+      <div data-gnl="1 3p t" style="height:300px;">
+        <div>t: üst</div>
+      </div>
+      <div data-gnl="1 3p o" style="height:300px;">
+        <div>o: orta</div>
+      </div>
+      <div data-gnl="1 3p a" style="height:300px;">
+        <div>a: alt</div>
+      </div>
+    </div>
+  </div>
+  {% highlight html %}
+    <div data-gnl="l">
+      <div data-gnl="1 3p">l: sol</div>
+    </div>
+    <div data-gnl="o">
+      <div data-gnl="1 3p">o: orta</div>
+    </div>
+    <div data-gnl="s">
+      <div data-gnl="1 3p">s: sağ</div>
+    </div>
+  {% endhighlight %}
+
+  <h3>Konumlama: _l, _lt, _t, _ts, _s, _as, _a, _la, _o</h3>
+  <p>
+    Bir ögenin kendisini herhangi bir yana yerleştirmek için _l, _lt, _t, _ts, _s, _as, _a, _la, _o değiştirgeleri kullanılır. Değiştirgelerin anlamları aşağıdaki gibidir. Soldan sağa ve üstten alta doğru yazma kuralına göre yanlara en yakın harfler hangi yan olduğunu tanımlamaktadır.
+  </p>
+  <div class="örnek">
+    <h3>Önizleme</h3>
+    <div class="önizleme">
+      <div style="height:150px;">
+        <div data-gnl="3 10p _t">_t: kendisi üst</div>
+        <div data-gnl="3 10p _o">_o: kendisi orta</div>
+        <div data-gnl="3 10p _a">_a: kendisi alt</div>
+      </div>
+      <div style="height:150px;">
+        <div data-gnl="3 10p _l">_l: kendisi sol</div>
+        <div data-gnl="3 10p _o">_o: kendisi orta</div>
+        <div data-gnl="3 10p _s">_s: kendisi sağ</div>
+      </div>
+      <div style="height:150px;">
+        <div data-gnl="3 10p _lt">_lt: kendisi solüst</div>
+        <div data-gnl="3 10p _as">_as: kendisi altsağ</div>
+      </div>
+      <div style="height:150px;">
+        <div data-gnl="3 10p _la">_la: kendisi solalt</div>
+        <div data-gnl="3 10p _ts">_ts: kendisi üstsağ</div>
+      </div>
+    </div>
+  </div>
+  {% highlight html %}
+    <div style="height:150px;">
+      <div data-gnl="3 10p _t">_t: kendisi üst</div>
+      <div data-gnl="3 10p _o">_o: kendisi orta</div>
+      <div data-gnl="3 10p _a">_a: kendisi alt</div>
+    </div>
+    <div style="height:150px;">
+      <div data-gnl="3 10p _l">_l: kendisi sol</div>
+      <div data-gnl="3 10p _o">_o: kendisi orta</div>
+      <div data-gnl="3 10p _s">_s: kendisi sağ</div>
+    </div>
+    <div style="height:150px;">
+      <div data-gnl="3 10p _lt">_lt: kendisi solüst</div>
+      <div data-gnl="3 10p _as">_as: kendisi altsağ</div>
+    </div>
+    <div style="height:150px;">
+      <div data-gnl="3 10p _la">_la: kendisi solalt</div>
+      <div data-gnl="3 10p _ts">_ts: kendisi üstsağ</div>
+    </div>
+  {% endhighlight %}
 
   <h3>Konumlama: <span data-metin="dikkat">sağdan|soldan-SAYI SAYIp-aralık</span></h3>
   <p>Bir ögeyi soldan veya sağdan parça düzenine göre aralık bırakmak istiyorsak bu konumlama özelliğini kullanırız. Eğer parça ölçeğinde değişiklik yapmak istemiyorsanız sadece sağdan|soldan-SAYI yazmanız yeterli olacaktır.</p>
@@ -38,8 +174,8 @@ title: Konumlama - Kap Örgüsü
       2 3p
     </div>
   {% endhighlight %}
-  <p></p>
-
+  
+  <!--
   <h3>Konumlama: <span data-metin="dikkat">solda | ortada | sağda | solda-ol | ortada-ol | sağda-ol</span></h3>
   <p>"solda" sınıfı bir HTML etiketindeki içeriği sola dayalı olarak gösterir.</p>
   <p>"ortada" sınıfı bir HTML etiketindeki içeriği ortalanmış olarak gösterir.</p>
@@ -86,7 +222,7 @@ title: Konumlama - Kap Örgüsü
     </div>
   {% endhighlight %}
   <p></p>
-
+  
   <h3>Konumlama: <span data-metin="dikkat">üstte | göbekte | altta | üstte-ol | göbekte-ol | altta-ol</span></h3>
   <p>"üstte" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
   <p>"göbekte" sınıfı bir HTML etiketindeki içeriği dikey konumda ortalanmış gösterir.</p>
@@ -169,7 +305,7 @@ title: Konumlama - Kap Örgüsü
     </div>
   {% endhighlight %}
   <p></p>
-
+-->
 
   <h3>Konumlama: <span data-metin="dikkat">araları-aralık | dengeli-aralık</span></h3>
   <p>"araları-aralık" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
