--- a/1.0/tr/kap-orgusu/konumlama.html
+++ b/1.0/tr/kap-orgusu/konumlama.html
@@ -82,14 +82,14 @@ title: Konumlama - Kap Örgüsü
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="l">
-      <div data-gnl="1 3p">l: sol</div>
+    <div data-gnl="1 3p t" style="height:300px;">
+      <div>t: üst</div>
     </div>
-    <div data-gnl="o">
-      <div data-gnl="1 3p">o: orta</div>
+    <div data-gnl="1 3p o" style="height:300px;">
+      <div>o: orta</div>
     </div>
-    <div data-gnl="s">
-      <div data-gnl="1 3p">s: sağ</div>
+    <div data-gnl="1 3p a" style="height:300px;">
+      <div>a: alt</div>
     </div>
   {% endhighlight %}
 
