--- a/1.0/tr/kap-orgusu/konumlama.html
+++ b/1.0/tr/kap-orgusu/konumlama.html
@@ -306,6 +306,139 @@ title: Konumlama - Kap Örgüsü
   {% endhighlight %}
   <p></p>
 -->
+  <h3>Konumlama: aralık-SAYI ve aralık-YANSAYI</h3>
+  <p>Ögeler arasında aralık bırakmak için bu özellik tam size göre. Kapsayıcı etikete aralık değiştirgesini doğru şekilde yazdıktan sonra aşağıdaki gibi bir örneğe sahip olacaksınız.</p>
+  <div class="örnek">
+    <h3>Önizleme</h3>
+    <div class="önizleme-1">
+      <div data-gnl="araları-aralık-1">
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+        <div data-gnl="1 4p">
+          <div class="kart">
+            Kart
+          </div>
+        </div>
+      </div>      
+    </div>
+  </div>
+  {% highlight html %}
+    <div data-gnl="araları-aralık-1">
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+      <div data-gnl="1 4p">
+        <div class="kart">
+          Kart
+        </div>
+      </div>
+    </div>
+  {% endhighlight %}
 
   <h3>Konumlama: <span data-metin="dikkat">araları-aralık | dengeli-aralık</span></h3>
   <p>"araları-aralık" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
@@ -593,51 +726,4 @@ title: Konumlama - Kap Örgüsü
       </div>
     </div>
   {% endhighlight %}
-  <p></p>
-
-  <h3>Konumlama: <span data-metin="dikkat">kaymadan | dürmeden</span></h3>
-  <p>"kaymadan" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
-  <p>"dürmeden" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
-  <p></p>
-  <div class="örnek">
-    <h3>Önizleme</h3>
-    <div class="önizleme">
-      <div data-gnl="1 24p kaymadan">
-        Taşmadan yazamadıklarımızdan mısınız?
-      </div>
-      <div data-gnl="dürmeden">
-        <div>
-          Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
-        </div>
-        <div>
-          Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
-        </div>
-        <div>
-          Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
-        </div>
-        <div>
-          Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
-        </div>
-      </div>
-    </div>
-  </div>
-  {% highlight html %}
-    <div data-gnl="1 24p kaymadan">
-      Taşmadan yazamadıklarımızdan mısınız?
-    </div>
-    <div data-gnl="dürmeden">
-      <div>
-        Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
-      </div>
-      <div>
-        Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
-      </div>
-      <div>
-        Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
-      </div>
-      <div>
-        Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
-      </div>
-    </div>
-  {% endhighlight %}
-  <p></p>
+  <p></p>  
