--- a/1.0/tr/kap-orgusu/aralik-duzeni.html
+++ b/1.0/tr/kap-orgusu/aralik-duzeni.html
@@ -78,129 +78,81 @@ title: Aralık Düzeni
 	  <div class="önizleme-1">
 	    <div data-gnl="araları-aralık-1 5r">
 	      <div>
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">1</div>
 	      </div>
 	      <div>
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">2</div>
 	      </div>
 	      <div>
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">3</div>
 	      </div>
 	      <div>
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">4</div>
 	      </div>
 	      <div>
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">5</div>
 	      </div>
 	      <div data-gnl="2 5p">
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">6</div>
 	      </div>
 	      <div>
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">7</div>
 	      </div>
 	      <div>
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">8</div>
 	      </div>
 	      <div>
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">9</div>
 	      </div>
 	      <div>
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">10</div>
 	      </div>
 	      <div data-gnl="3 5p">
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">11</div>
 	      </div>
 	      <div>
-	        <div class="kart">
-	          Kart
-	        </div>
+	        <div class="kart">12</div>
 	      </div>
 	    </div>
 	  </div>
 	</div>
 	{% highlight html %}
-	<div data-gnl="araları-aralık-1 5r">
-	  <div>
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div>
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div>
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div>
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div>
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div data-gnl="2 5p">
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div>
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div>
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div>
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div>
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div data-gnl="3 5p">
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	  <div>
-	    <div class="kart">
-	      Kart
-	    </div>
-	  </div>
-	</div>
+    <div data-gnl="araları-aralık-1 5r">
+      <div>
+        <div class="kart">1</div>
+      </div>
+      <div>
+        <div class="kart">2</div>
+      </div>
+      <div>
+        <div class="kart">3</div>
+      </div>
+      <div>
+        <div class="kart">4</div>
+      </div>
+      <div>
+        <div class="kart">5</div>
+      </div>
+      <div data-gnl="2 5p">
+        <div class="kart">6</div>
+      </div>
+      <div>
+        <div class="kart">7</div>
+      </div>
+      <div>
+        <div class="kart">8</div>
+      </div>
+      <div>
+        <div class="kart">9</div>
+      </div>
+      <div>
+        <div class="kart">10</div>
+      </div>
+      <div data-gnl="3 5p">
+        <div class="kart">11</div>
+      </div>
+      <div>
+        <div class="kart">12</div>
+      </div>
+    </div>
 	{% endhighlight %}
