--- a/1.0/tr/kurulum.html
+++ b/1.0/tr/kurulum.html
@@ -2,14 +2,10 @@
 layout: s1n0/varsayilan
 title: Kurulum
 ---
-<div data-gnl="1 1p">
-    <p>
-      <span class="simget">deveb</span>'i çalışmalarınıza eklemek çok kolaydır. CSS dosyasını ve gerek duyma durumuna göre
-      javascript dosyalarını çalışma dosyalarınızın arasında uygun yere kopyalayın. HTML dosyanızda
-      ise çağırma işlemini yapın.
+    <p class="girlik">
+      <span class="simget">deveb</span> çalışmalarınıza aktarılabilen kolay bir önyüz çatısıdır. Yapılması gereken <span class="simget">deveb</span> dosyalarını dizinleriniz arasında uygun yere kopyalamak ve html dosyalarınızda çağırmaktır. 
       <br><br>
-      İsteğe bağlı olmak üzere türkçe veya ingilizce diliyle geliştirilen <span class="simget">deveb</span> sürümlerini
-      kullanabilirsiniz. Dilerseniz iki dili de aynı anda kullanabilirsiniz.
+      Türkçe veya İngilizce olarak geliştirilen herhangi bir <span class="simget">deveb</span> sürümünü kullanabilirsiniz.
     </p>
     <p>
       <a data-basmal class="birincil" href="https://github.com/data-deveb/data-deveb.github.io/releases/download/deveb-1.0-tr/deveb-s1n0.zip">İNDİR: deveb-s1n0.zip</a>
@@ -18,7 +14,7 @@ title: Kurulum
     <h2><span class="simget">deveb</span> Türkçe Sürüm</h2>
     {% highlight html %}
       <link href="/css/deveb-s1n0/deveb.css" rel="stylesheet">
-      <!-- Edge 15 ve daha eski internet explorer sürümleri için arkayüzde dahil edilecek css dosyası -->
+      <!-- Edge 15 ve Internet Explorer'ın eski sürümleri -->
       <link href="/css/deveb-s1n0/deveb-ie.css" rel="stylesheet">
     {% endhighlight %}
 
@@ -27,5 +23,5 @@ title: Kurulum
       <link href="/css/deveb-s1n0/deveb-en.css" rel="stylesheet">
     {% endhighlight %}
 
-    <p>Not: İngilizce diliyle geliştirilen sürüm, türkçe sürümü geriden takip etmektedir. Türkçe sürüme göre daha az özelliğe sahip olabilir ve hata durumu görülebilir.</p>
-</div>
+    <p>Not: İngilizce diliyle geliştirilen sürüm, türkçe sürümü geriden takip etmektedir. Türkçe sürüme göre daha az özelliğe sahip olabilir ve hata görülebilir.</p>
+
