--- a/1.0/en/kurulum.html
+++ b/1.0/en/kurulum.html
@@ -3,7 +3,7 @@ layout: s1n0/varsayilan
 title: Install
 ---
     <p class="girlik">
-      <span class="simget">deveb</span> is a frontend framework that can be easily imported into your projects. Add the <span class="simget">deveb</span> files to the correct place in your projects. You can use any version of <span class="simget">deveb</span> which is developed in Turkish or English language.
+      <span class="simget">deveb</span> is a frontend framework that can be easily imported into your projects. Add the files to the correct place in your projects. You can use any version which is developed in Turkish or English language.
     </p>
     <p>
       <a data-basmal class="birincil" href="https://github.com/data-deveb/data-deveb.github.io/releases/download/deveb-1.0-tr/deveb-s1n0.zip">DOWNLOAD: deveb-s1n0.zip</a>
