--- a/1.0/en/kurulum.html
+++ b/1.0/en/kurulum.html
@@ -1,6 +1,6 @@
 ---
 layout: s1n0/varsayilan
-title: Install
+title: Installation
 ---
     <p class="girlik">
       <span class="simget">deveb</span> is a frontend framework that can be easily imported into your projects. Add the files to the correct place in your projects. You can use any version which is developed in Turkish or English language.
