--- a/1.0/tr/kurulum.html
+++ b/1.0/tr/kurulum.html
@@ -3,7 +3,7 @@ layout: s1n0/varsayilan
 title: Kurulum
 ---
     <p class="girlik">
-      <span class="simget">deveb</span> çalışmalarınıza aktarılabilen kolay bir önyüz çatısıdır. Yapılması gereken <span class="simget">deveb</span> dosyalarını dizinleriniz arasında uygun yere kopyalamak ve html dosyalarınızda çağırmaktır. Türkçe veya İngilizce olarak geliştirilen herhangi bir sürümünü kullanabilirsiniz.
+      <span class="simget">deveb</span> çalışmalarınıza aktarılabilen kolay bir önyüz çatısıdır. Yapılması gereken dosyaları dizinleriniz arasında uygun yere kopyalamak ve html dosyalarınızda çağırmaktır. Türkçe veya İngilizce olarak geliştirilen herhangi bir sürümünü kullanabilirsiniz.
     </p>
     <p>
       <a data-basmal class="birincil" href="https://github.com/data-deveb/data-deveb.github.io/releases/download/deveb-1.0-tr/deveb-s1n0.zip">İNDİR: deveb-s1n0.zip</a>
