--- a/1.0/en/index.html
+++ b/1.0/en/index.html
@@ -1,6 +1,6 @@
 ---
 layout: s1n0/varsayilan
-title: Starter
+title: Start
 ---
 <p class="girlik">
   Developed for web developers, more than usual, with brand new features, bringing a new difference, responsive frontend framework of present. Welcome to <span class="simget">deveb</span>
@@ -51,23 +51,18 @@ title: Starter
   <span class="simget">deveb</span> installation is quite simple. Download the latest stable release and embed your work. What you need to do is described on the <a href="/1.0/en/kurulum">installation page</a>.
 </p>
 
-<h1>Yeni Şeyler Var!</h1>
+<h1>There Are New Things!</h1>
 <p>
-  HTML sınıfları yerine HTML veri-öznitelikleri ile çalışmaktadır. Bazı özellikleri
-  uyarlamalı olabilmesi için ekran örgüsüyle iliştirilmiş olarak çalışır. Çoklu parça
-  düzenine sahip kap örgüsü kullanıma hazırdır. Sadece bu özelliği olmayıp genleşme,
-  konumlama gibi yararlı özellikleri de barındırır. Küçük ekran öncelikli çalışan
-  özelliklerimizi yakından incelemek için belleti sayfalarını inceleyin.
+  It works with HTML data-attributes instead of HTML classes. Some features are attached to the screen system to be responsive. The grid system is ready for use with the multi-piece system. It just does not have this feature. Grow, positioning and useful properties. Check out the documentation for a closer look at our other features.
 </p>
 
-<h1>Topluluk</h1>
+<h1>Community</h1>
 <p>
-  <span class="simget">deveb</span> geliştirilirken takip olarak güncel
-  kalın ve aşağıdaki bağlardan topluluğa ulaşın.
+  Keep up-to-date as the <span class="simget">deveb</span> is developed and reach the community from the links below.
 </p>
 <ul>
-  <li><a href="https://www.facebook.com/datadeveb/?ref=bookmarks">Facebook sayfamızı</a> takip edin.</li>
-  <li><a href="https://www.facebook.com/groups/1818283228485179/?ref=bookmarks">Facebook grubumuza</a> katılın.</li>
-  <li><a href="https://twitter.com/datadeveb">Twitter'da datadeveb hesabını</a> takip edin.</li>
-  <li><a href="https://discord.gg/GeaYaCb">Discord odamız</a>a katılın canlı iletişim kurun.</li>
+  <li><a href="https://www.facebook.com/datadeveb/?ref=bookmarks">Facebook page</a>- follow.</li>
+  <li><a href="https://www.facebook.com/groups/1818283228485179/?ref=bookmarks">Facebook group</a> join.</li>
+  <li><a href="https://twitter.com/datadeveb">Twitter @datadeveb</a> follow.</li>
+  <li><a href="https://discord.gg/GeaYaCb">Discord room</a> join & live chat.</li>
 </ul>
