--- a/1.0/tr/kurulum.html
+++ b/1.0/tr/kurulum.html
@@ -6,7 +6,7 @@ title: Kurulum
       <span class="simget">deveb</span> çalışmalarınıza aktarılabilen kolay bir önyüz çatısıdır. Yapılması gereken dosyaları dizinleriniz arasında uygun yere kopyalamak ve html dosyalarınızda çağırmaktır. Türkçe veya İngilizce olarak geliştirilen herhangi bir sürümünü kullanabilirsiniz.
     </p>
     <p>
-      <a data-basmal class="birincil" href="https://github.com/data-deveb/data-deveb.github.io/releases/download/deveb-1.0-tr/deveb-s1n0.zip">İNDİR: deveb-s1n0.zip</a>
+      <a data-basmal data-gnl="_o 0" class="birincil" href="https://github.com/data-deveb/data-deveb.github.io/releases/download/deveb-1.0-tr/deveb-s1n0.zip" style="border:1px solid purple; padding:10px;">İNDİR: deveb-s1n0.zip</a>
     </p>
 
     <h2><span class="simget">deveb</span> Türkçe Sürüm</h2>
