--- a/1.0/en/ekran-orgusu.html
+++ b/1.0/en/ekran-orgusu.html
@@ -1,88 +1,77 @@
 ---
 layout: s1n0/varsayilan
-title: Ekran Örgüsü
+title: Screen System
 ---
 <p class="girlik">
-  Saat ekranları, telefon ekranları, tablet ekranları, dizüstü ekranları,
-  masaüstü ekranları, tv ekranları ve dev ekranlar olarak gruplandırılmış
-  8 farklı adet ekran ölçeği uyarlamalı olarak kullanılır.
+  8 different pieces of screen scales are grouped as small screens, mobile screens, tablet screens, laptop screens, desktop screens, tv screens and huge screens.
 </p>
 <p>
-  Günümüzde ekran ölçek ve çözünürlüklerindeki çeşitliliğinin artmasıyla tasarımlarınızı
-  zorunlu olarak uyarlamalı yapmak durumundayız. Yakın gelecekte yaygınlaşacak
   minik ekranları bile şimdiden ele almalıyız... Önyüz çatıları dünyasında yeterli
-  olduğu düşünülen uyarlamalı ekran ölçekleri beş altı civarındadır.
-  <span class="simget">deveb</span> önyüz çatısı ise daha kapsamlı olarak hazır
-  hâle getirilip kullanıma sunulmuştur. Aşağıdaki tabloda uyumlu ekran ölçeklerini
-  inceleyebilirsiniz.
+  Today, screen scales and screen resolutions are very diverse. For this reason, adaptive design is a necessity. Small screens will become popular in the near future. <span class="simget">deveb</span> has more screen range than other frameworks.
 </p>
 <p></p>
 <table class="tablo">
   <thead>
     <tr>
-      <th>Ekranlar</th>
+      <th>Screens</th>
       <th>
-        Genel <br>
+        General <br>
         <i class="fa fa-minus-square-o" aria-hidden="true"></i>
-        <i class="fa fa-mobile" aria-hidden="true"></i>
-        <i class="fa fa-tablet" aria-hidden="true"></i>
-        <i class="fa fa-laptop" aria-hidden="true"></i>
-        <i class="fa fa-desktop" aria-hidden="true"></i>
-        <i class="fa fa-television" aria-hidden="true"></i>
+        »
         <i class="fa fa-window-maximize" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">saat » dev</span>
+        <br><span data-metin="olumlu ince">mini » huge</span>
       </th>
       <th>
-        Minik <br>
+        Mini <br>
         <i class="fa fa-minus-square-o" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">saat</span>
+        <br><span data-metin="olumlu ince">Watches</span>
       </th>
       <th>
-        Ufak <br>
+        x-Small <br>
         <i class="fa fa-mobile" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">telefon</span>
+        <br><span data-metin="olumlu ince">Mobiles</span>
       </th>
       <th>
-        Küçük <br>
+        Small <br>
         <i class="fa fa-tablet" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">tablet</span>
+        <br><span data-metin="olumlu ince">Tablets</span>
       </th>
       <th>
-        Orta <br>
+        Medium <br>
         <i class="fa fa-laptop" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">dizüstü</span>
+        <br><span data-metin="olumlu ince">Laptops</span>
       </th>
       <th>
-        Büyük <br>
+        Large <br>
         <i class="fa fa-desktop" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">Masaüstü</span>
+        <br><span data-metin="olumlu ince">Desktops</span>
       </th>
       <th>
-        Kocaman <br>
+        x-Large <br>
         <i class="fa fa-television" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">Televizyon</span>
+        <br><span data-metin="olumlu ince">Televisions</span>
       </th>
       <th>
-        Dev <br>
+        Huge <br>
         <i class="fa fa-window-maximize" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">Dev ekran</span>
+        <br><span data-metin="olumlu ince">Huge screens</span>
       </th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th>Birimleri</th>
+      <th>Units</th>
       <td>data-gnl</td>
-      <td>data-mnk</td>
-      <td>data-ufk</td>
-      <td>data-kçk</td>
-      <td>data-ort</td>
-      <td>data-byk</td>
-      <td>data-kcm</td>
-      <td>data-dev</td>
+      <td>data-mn</td>
+      <td>data-xs</td>
+      <td>data-sm</td>
+      <td>data-md</td>
+      <td>data-lg</td>
+      <td>data-xl</td>
+      <td>data-hg</td>
     </tr>
     <tr>
-      <th>Ölçekler</th>
+      <th>Scales</th>
       <td>0 »</td>
       <td>0 » 300px</td>
       <td>300px »</td>
@@ -93,63 +82,62 @@ title: Ekran Örgüsü
       <td>1900px »</td>
     </tr>
     <tr>
-      <th>Ekran Seçme</th>
-      <td><span data-metin="ana gri">sınıf</span></td>
-      <td>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span><br>büyükleriyle-<span data-metin="ana gri">sınıf</span><br>büyükleri-<span data-metin="ana gri">sınıf</span></td>
-      <td colspan="5">küçükleri-<span data-metin="ana gri">sınıf</span><br>küçükleriyle-<span data-metin="ana gri">sınıf</span><br>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span><br>büyükleriyle-<span data-metin="ana gri">sınıf</span><br>büyükleri-<span data-metin="ana gri">sınıf</span></td>
-      <td>küçükleri-<span data-metin="ana gri">sınıf</span><br>küçükleriyle-<span data-metin="ana gri">sınıf</span><br>bunu-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span></td>
+      <th>Select Screen</th>
+      <td><span data-metin="ana gri">class</span></td>
+      <td>
+        <span data-metin="ana gri">class</span>-this<br>
+        <span data-metin="ana gri">class</span><br>
+        <span data-metin="ana gri">class</span>-width-bigger<br>
+        <span data-metin="ana gri">class</span>-bigger
+      </td>
+      <td colspan="5">
+        <span data-metin="ana gri">class</span>-smaller<br>
+        <span data-metin="ana gri">class</span>-width-smaller<br>
+        <span data-metin="ana gri">class</span>-this<br>
+        <span data-metin="ana gri">class</span><br>
+        <span data-metin="ana gri">class</span>-width-bigger<br>
+        <span data-metin="ana gri">class</span>-width-bigger
+      </td>
+      <td>
+        <span data-metin="ana gri">class</span>-smaller<br>
+        <span data-metin="ana gri">class</span>-width-smaller<br>
+        <span data-metin="ana gri">class</span>-this<br>
+        <span data-metin="ana gri">class</span>
+      </td>
     </tr>
   </tbody>
 </table>
 
-<h3>Ekran Yönergeleri</h3>
+<h3>Display Instructions</h3>
 
 <p>
-  <span class="simget">deveb</span> ekran örgüsü küçük ekranlardan büyük ekranlara
-  doğru olmak üzere belirli bir yönde varsayılan olarak etki altına alır. Bunun
-  haricinde bazı durumlarda geçerli olmak üzere tam tersi yönde veya belirtilen
-  tek ekran önceğinde kullanımı da yapılabilir.
-  <br><br>
-  Örneğin bir ögeyi veya alanı dizüstü ekranlarına kadar gizlemek istiyorsanız
-  <span data-metin="ana">data-ort="küçükleri-gizle"</span> olarak tanımlamanız yeterlidir.
-  Böylelikle dizüstünden küçük ekranlarda gizleme yapmış olacaksınız.
+  <span class="simget">deveb</span> screen system works by default from small to large screens. Optionally, large to small screens or the specified display is affected. For example, if you want to hide an item or area up to the laptop screen, you just need to define data-md = "small-hide". So you'll be hiding from the laptop to the small screens.
 </p>
 
-<h4>Kullanımı</h4>
+<h4>Usage</h4>
 <p>
-  Ekran örgüsü, <span class="simget">deveb</span>'in özellikleriyle iliştirilmiş
-  şekilde kullanılır. Kap örgüsünde varsayılan kural gerçeli olduğu gibi başka
-  özelliklerde daha farklı kullanıldığını görmeniz doğaldır.
+  The screen system is used as attached to the features of <span class="simget">deveb</span>. For example the grid system. Depending on the situation affecting the display direction may be different.
 </p>
+
+<h5>?-width-smaller</h5>
 <p>
-  Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı
-  kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha
-  küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız
-  büyük ihtimal doğal (auto) genişliğe veya 100% genişliğe sahip olacaktır.
-  Diğer durumlarda ise ekran yönlerini belirtmek için şöyle kullanımlara baş vururuz;
+  Defined screen and smaller screens. For example:
+  data-md="hide-width-smaller"
 </p>
-<h5>küçükleriyle-?</h5>
+<h5>?-smaller</h5>
 <p>
-  Belirtildiği ekran dahil kendisinden küçük ekranları kapsar. Örnek:
-  data-ort="küçükleriyle-gizle" (english: data-md="hide-with-smaller")
+  Smaller screens from defined screen. For example: data-md="hide-smaller"
 </p>
-<h5>küçükleri-?</h5>
+<h5>?-this</h5>
 <p>
-  Belirtildiği ekrandan küçük ekranları kapsar. Örnek: data-ort="küçükleri-gizle"
-  (english: data-md="hide-smaller")
+  Defined screen. For example: data-md="hide-this"
 </p>
-<h5>bunu-?</h5>
+<h5>?-bigger</h5>
 <p>
-  Belirtildiği ekranları kapsar. Örnek: data-ort="bunu-gizle"
-  (english: data-md="hide-this")
+  Bigger screens from defined screen. For example: data-md="hide-bigger"
 </p>
-<h5>büyükleri-?</h5>
+<h5>?-with-bigger</h5>
 <p>
-  Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="büyükleri-gizle"
-  (english: data-md="hide-bigger")
-</p>
-<h5>büyükleriyle-?</h5>
-<p>
-  Belirtildiği ekran dahil kendisinden büyük ekranları kapsar. Örnek:
-  data-ort="büyükleriyle-gizle" (english: data-md="hide-with-bigger")
+  Defined screen and bigger screens. For example:
+  data-md="hide-bigger"
 </p>
