--- a/1.0/tr/ekran-orgusu.html
+++ b/1.0/tr/ekran-orgusu.html
@@ -3,18 +3,12 @@ layout: s1n0/varsayilan
 title: Ekran Örgüsü
 ---
 <p class="girlik">
-  Saat ekranları, telefon ekranları, tablet ekranları, dizüstü ekranları,
+  Minik ekranları, telefon ekranları, tablet ekranları, dizüstü ekranları,
   masaüstü ekranları, tv ekranları ve dev ekranlar olarak gruplandırılmış
   8 farklı adet ekran ölçeği uyarlamalı olarak kullanılır.
 </p>
 <p>
-  Günümüzde ekran ölçek ve çözünürlüklerindeki çeşitliliğinin artmasıyla tasarımlarınızı
-  zorunlu olarak uyarlamalı yapmak durumundayız. Yakın gelecekte yaygınlaşacak
-  minik ekranları bile şimdiden ele almalıyız... Önyüz çatıları dünyasında yeterli
-  olduğu düşünülen uyarlamalı ekran ölçekleri beş altı civarındadır.
-  <span class="simget">deveb</span> önyüz çatısı ise daha kapsamlı olarak hazır
-  hâle getirilip kullanıma sunulmuştur. Aşağıdaki tabloda uyumlu ekran ölçeklerini
-  inceleyebilirsiniz.
+  Günümüzde, ekran ölçekleri ve ekran çözünürlükleri çok çeşitlidir. Bu nedenle uyarlamalı tasarım yapmak bir zorunluluktur. Minik ekranlar ise yakın gelecekte yaygınlaşacaktır. <span class="simget">deveb</span> diğer çatılara göre daha fazla ekran aralığı içerir.
 </p>
 <p></p>
 <table class="tablo">
@@ -121,16 +115,9 @@ title: Ekran Örgüsü
   şekilde kullanılır. Kap örgüsünde varsayılan kural gerçeli olduğu gibi başka
   özelliklerde daha farklı kullanıldığını görmeniz doğaldır.
 </p>
-<p>
-  Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı
-  kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha
-  küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız
-  büyük ihtimal doğal (auto) genişliğe veya 100% genişliğe sahip olacaktır.
-  Diğer durumlarda ise ekran yönlerini belirtmek için şöyle kullanımlara baş vururuz;
-</p>
 <h5>küçükleriyle-?</h5>
 <p>
-  Belirtildiği ekran dahil kendisinden küçük ekranları kapsar. Örnek:
+  Tanımlı ekran ve daha küçük ekranlar. Örnek:
   data-ort="küçükleriyle-gizle" (english: data-md="hide-with-smaller")
 </p>
 <h5>küçükleri-?</h5>
